--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -11,5 +11,9 @@ $color10: #000;   // Black
 $color11: #fff;   // White
 
 
-
+$break-smaller: 320px;  
+$break-small: 480px;
+$break-medium: 768px;
+$break-large: 1028px;
+$break-larger: 1200px;
 
