--- a/sass/partials/_type.scss
+++ b/sass/partials/_type.scss
@@ -27,11 +27,7 @@ font-size: 1em;
 letter-spacing: 2px;	
 }
 
-
-
-p {
-text-indent: 1.25em;
-}
+p {}
 
 
 // @media screen and (max-width:325px) {}
