--- a/css/styles.css
+++ b/css/styles.css
@@ -161,88 +161,88 @@ body { width: 95.5078125%; margin: 0 auto; display: -ms-flexbox; display: -webki
 @media screen and (max-width: 768px) { /* line 7, ../sass/partials/_layout.scss */
   body { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; height: 1660px; width: 90%; } }
 
-/* line 21, ../sass/partials/_layout.scss */
+/* line 20, ../sass/partials/_layout.scss */
 .flex-item:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; width: 21.09375%; }
-@media screen and (max-width: 768px) { /* line 21, ../sass/partials/_layout.scss */
+@media screen and (max-width: 768px) { /* line 20, ../sass/partials/_layout.scss */
   .flex-item:nth-child(1) { width: 100%; } }
 
-/* line 28, ../sass/partials/_layout.scss */
+/* line 27, ../sass/partials/_layout.scss */
 .flex-item:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; width: 35.15625%; }
-@media screen and (max-width: 768px) { /* line 28, ../sass/partials/_layout.scss */
+@media screen and (max-width: 768px) { /* line 27, ../sass/partials/_layout.scss */
   .flex-item:nth-child(2) { width: 100%; } }
 
-/* line 37, ../sass/partials/_layout.scss */
+/* line 34, ../sass/partials/_layout.scss */
 .flex-item:nth-child(3) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; width: 35.15625%; }
-@media screen and (max-width: 768px) { /* line 37, ../sass/partials/_layout.scss */
+@media screen and (max-width: 768px) { /* line 34, ../sass/partials/_layout.scss */
   .flex-item:nth-child(3) { width: 100%; } }
 
-/* line 50, ../sass/partials/_layout.scss */
-nav { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; height: 409px; }
-@media screen and (max-width: 768px) { /* line 50, ../sass/partials/_layout.scss */
+/* line 46, ../sass/partials/_layout.scss */
+nav { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; height: 408px; }
+@media screen and (max-width: 768px) { /* line 46, ../sass/partials/_layout.scss */
   nav { height: 189px; display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; } }
 
-/* line 59, ../sass/partials/_layout.scss */
+/* line 55, ../sass/partials/_layout.scss */
 .navi:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 62, ../sass/partials/_layout.scss */
+/* line 58, ../sass/partials/_layout.scss */
 .navi:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 66, ../sass/partials/_layout.scss */
+/* line 62, ../sass/partials/_layout.scss */
 .navi { border: 2px solid #999; height: 189px; width: 100%; }
-@media screen and (max-width: 768px) { /* line 66, ../sass/partials/_layout.scss */
+@media screen and (max-width: 768px) { /* line 62, ../sass/partials/_layout.scss */
   .navi { width: 46.875%; } }
 
-/* line 78, ../sass/partials/_layout.scss */
+/* line 74, ../sass/partials/_layout.scss */
 .main { height: 816px; }
 
-/* line 83, ../sass/partials/_layout.scss */
+/* line 79, ../sass/partials/_layout.scss */
 .main, section { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; width: 100%; }
 
-/* line 90, ../sass/partials/_layout.scss */
-section { height: 601px; }
+/* line 85, ../sass/partials/_layout.scss */
+section { height: 597px; }
 
-/* line 95, ../sass/partials/_layout.scss */
+/* line 89, ../sass/partials/_layout.scss */
 header { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; border: 2px solid #999; height: 189px; width: 100%; }
 
-/* line 101, ../sass/partials/_layout.scss */
+/* line 96, ../sass/partials/_layout.scss */
 article:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; border: 2px solid #999; height: 378px; width: 100%; }
 
-/* line 107, ../sass/partials/_layout.scss */
+/* line 102, ../sass/partials/_layout.scss */
 article:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; border: 2px solid #999; height: 189px; width: 100%; }
 
-/* line 121, ../sass/partials/_layout.scss */
+/* line 116, ../sass/partials/_layout.scss */
 aside { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; width: 100%; height: 593px; }
 
-/* line 128, ../sass/partials/_layout.scss */
+/* line 122, ../sass/partials/_layout.scss */
 aside:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 131, ../sass/partials/_layout.scss */
+/* line 125, ../sass/partials/_layout.scss */
 aside:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 134, ../sass/partials/_layout.scss */
+/* line 128, ../sass/partials/_layout.scss */
 aside:last-child(3) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 137, ../sass/partials/_layout.scss */
+/* line 132, ../sass/partials/_layout.scss */
 .archive { border: 2px solid #999; height: 400px; width: 100%; }
 
-/* line 143, ../sass/partials/_layout.scss */
-.contact { -webkit-justify-content: space-between; justify-content: space-between; display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; height: 100px; width: 100%; -webkit-justify-content: space-between; justify-content: space-between; }
+/* line 138, ../sass/partials/_layout.scss */
+.contact { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; height: 100px; width: 100%; }
 
-/* line 153, ../sass/partials/_layout.scss */
+/* line 145, ../sass/partials/_layout.scss */
 .contact:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 156, ../sass/partials/_layout.scss */
+/* line 148, ../sass/partials/_layout.scss */
 .contact:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 159, ../sass/partials/_layout.scss */
+/* line 151, ../sass/partials/_layout.scss */
 .contact:nth-child(3) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 163, ../sass/partials/_layout.scss */
+/* line 155, ../sass/partials/_layout.scss */
 .contactSub { height: 100px; width: 27.77777777777778%; border: 2px solid #999; }
 
-/* line 168, ../sass/partials/_layout.scss */
+/* line 160, ../sass/partials/_layout.scss */
 .rights { height: 36px; width: 100%; border: 2px solid #999; text-align: right; padding: 5px 10px 0 0; color: #999; }
-/* line 175, ../sass/partials/_layout.scss */
+/* line 167, ../sass/partials/_layout.scss */
 .rights:hover { color: #fff; }
 
 /* line 1, ../sass/partials/_type.scss */
