--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -8,8 +8,7 @@ body {
     width: 95.5078125%;
     margin: 0 auto;   
     @include containerRow;
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
+    @include justifyContent-spaceAround;
         @media screen and (max-width: $break-medium) {
     @include containerCol;
     @include justifyContent-spaceBetween;
@@ -23,25 +22,22 @@ body {
     width: 21.09375%;
         @media screen and (max-width: $break-medium) {
     width: 100%;
-}
-}
+    }
+    }
 .flex-item:nth-child(2) {
     @include flexItem;
     width: 35.15625%;
         @media screen and (max-width: $break-medium) {
     width: 100%;
-    
-}
-}
-
+    }
+    }
 .flex-item:nth-child(3) {
     @include flexItem;
     width: 35.15625%;
         @media screen and (max-width: $break-medium) {
     width: 100%;
-    
-}
-}
+    }
+    }
 
 
 // left row ==================================|
@@ -50,12 +46,12 @@ body {
 nav {
     @include containerCol;
     @include justifyContent-spaceBetween; 
-    height: 409px;
+    height: 408px;  // 189 + 30 + 189  
         @media screen and (max-width: $break-medium) {
     height: 189px;
     @include containerRow;
     }
-}
+    }
 .navi:nth-child(1) {
     @include flexItem;
     }
@@ -69,39 +65,38 @@ nav {
     width: 100%;
         @media screen and (max-width: $break-medium) {
     width:46.875%;
-}
-}
+    }
+    }
 
 // center row ==================================|
 
 
 .main {
-    height: 816px;
-}
+    height: 816px; // 189 + 30 + 378 + 30 + 189
+    }
 
 
 .main, section {
     @include containerCol;
-     -webkit-justify-content: space-between;
-    justify-content: space-between;
+    @include justifyContent-spaceBetween;
     width: 100%;
-    
-}
-section{
-    height: 601px;
+    }
 
-}
+section{
+    height: 597px;
+    }
 
 header{
     @include flexItem;
     border: 2px solid #999;
-    height: 189px;
+    height: 189px; // 378 + 30 + 189
     width: 100%;
     }
+
 article:nth-child(1) {
     @include flexItem;
     border: 2px solid #999;
-    height: 378px;
+    height: 378px; // 189 * 2
     width: 100%;
     }
 article:nth-child(2) {
@@ -119,52 +114,49 @@ article:nth-child(2) {
 
 
 aside {
-     @include containerCol;
-     -webkit-justify-content: space-between;
-     justify-content: space-between;
-     width: 100%;
-     height: 593px;
-}
+    @include containerCol;
+    @include justifyContent-spaceBetween;
+    width: 100%;
+    height: 593px;
+    }
 aside:nth-child(1){
     @include flexItem;
-}
+    }
 aside:nth-child(2){
     @include flexItem;
-}
+    }
 aside:last-child(3){
     @include flexItem;
-}
+    }
+
 .archive{
     border: 2px solid #999;
     height: 400px;
     width: 100%;
-}
+    }
 
 .contact {
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
     @include containerRow;
+    @include justifyContent-spaceBetween;
     height: 100px;
     width: 100%;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-    
-}
+    }
+
 .contact:nth-child(1){
     @include flexItem;
-}
+    }
 .contact:nth-child(2){
     @include flexItem;
-}
+    }
 .contact:nth-child(3){
     @include flexItem;
-}
+    }
 
 .contactSub{
     height: 100px;
     width: 27.77777777777778%;
     border: 2px solid #999;
-}
+    }
 .rights {
     height: 36px;
     width: 100%;
@@ -175,4 +167,4 @@ aside:last-child(3){
     &:hover {
     color: #fff;
     }
-}
+    }
