--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -46,9 +46,9 @@ body {
 nav {
     @include containerCol;
     @include justifyContent-spaceBetween; 
-    height: 408px;  // 189 + 30 + 189  
+    height: ($heightBlock*2)+$marginBlock;  // 189 + 30 + 189  
         @media screen and (max-width: $break-medium) {
-    height: 189px;
+    height: $heightBlock;
     @include containerRow;
     }
     }
@@ -61,7 +61,7 @@ nav {
 
 .navi {
     border: 2px solid #999;
-    height: 189px;
+    height: $heightBlock; // 189
     width: 100%;
         @media screen and (max-width: $break-medium) {
     width:46.875%;
@@ -72,7 +72,7 @@ nav {
 
 
 .main {
-    height: 816px; // 189 + 30 + 378 + 30 + 189
+    height: ($heightBlock*4)+($marginBlock*2); // 189 + 30 + 378 + 30 + 189
     }
 
 
@@ -83,27 +83,27 @@ nav {
     }
 
 section{
-    height: 597px;
+    height: ($heightBlock*3)+$marginBlock; // ( 189 * 2 ) + 30 + 189
     }
+
+header, article {
+    border: 2px solid #999;
+    width: 100%;
+    }
+
 
 header{
     @include flexItem;
-    border: 2px solid #999;
-    height: 189px; // 378 + 30 + 189
-    width: 100%;
+    height: $heightBlock; // 189
     }
 
 article:nth-child(1) {
     @include flexItem;
-    border: 2px solid #999;
-    height: 378px; // 189 * 2
-    width: 100%;
+    height: $heightBlock*2; // 189 * 2
     }
 article:nth-child(2) {
     @include flexItem;
-    border: 2px solid #999;
-    height: 189px;
-    width: 100%;
+    height: $heightBlock; // 189
     }
 
 
@@ -117,7 +117,7 @@ aside {
     @include containerCol;
     @include justifyContent-spaceBetween;
     width: 100%;
-    height: 593px;
+    height: ($heightBlock*3)+$marginBlock;
     }
 aside:nth-child(1){
     @include flexItem;
@@ -131,7 +131,7 @@ aside:last-child(3){
 
 .archive{
     border: 2px solid #999;
-    height: 400px;
+    height: ($heightBlock*2)+$marginBlock;
     width: 100%;
     }
 
@@ -158,11 +158,11 @@ aside:last-child(3){
     border: 2px solid #999;
     }
 .rights {
-    height: 36px;
+    height: $marginBlock;
     width: 100%;
     border: 2px solid #999;
     text-align: right;
-    padding: 5px 10px 0 0;
+    padding: 4px 10px 0 0;
     color: #999;
     &:hover {
     color: #fff;
