--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -12,8 +12,10 @@ $color11: #fff;   // White
 
 
 $break-smaller: 320px;  
-$break-small: 480px;
-$break-medium: 768px;
-$break-large: 1028px;
+$break-small: 	480px;
+$break-medium: 	768px;
+$break-large:  1028px;
 $break-larger: 1200px;
 
+$heightBlock: 189px;
+$marginBlock: 30px;
