--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -10,6 +10,9 @@ $color9: #FF00FF; // Magenta
 $color10: #000;   // Black
 $color11: #fff;   // White
 
+$flexcolor1: rgba(122,198,218,.3); // soft blue #7AC6DA
+$flexcolor2: #2D3D4F; // dark blue #273A66 #30446E
+
 
 $break-smaller: 320px;  
 $break-small: 	480px;
@@ -19,3 +22,4 @@ $break-larger: 1200px;
 
 $heightBlock: 189px;
 $marginBlock: 30px;
+
