--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -4,3 +4,10 @@
 -moz-box-sizing: border-box;    /* Firefox, other Gecko */
 box-sizing: border-box;         /* Opera/IE 8+ */
 }
+
+
+@mixin boxShadow1{
+-webkit-box-shadow: 0px 0px 30px rgba(122,198,218,.3);
+-moz-box-shadow:    0px 0px 30px rgba(122,198,218,.3);
+box-shadow:         0px 0px 30px rgba(122,198,218,.3);
+}
