--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,5 +3,6 @@
 @import "partials/mixins";
 @import "partials/normalize";
 @import "partials/flexbox";
+// @import "partials/textShadow";
 @import "partials/layout";
 @import "partials/type";
