--- a/css/styles.css
+++ b/css/styles.css
@@ -183,69 +183,85 @@ nav { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-d
 
 /* line 55, ../sass/partials/_layout.scss */
 .navi:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
+/* line 18, ../sass/partials/_mixins.scss */
+.navi:nth-child(1):hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 58, ../sass/partials/_layout.scss */
+/* line 59, ../sass/partials/_layout.scss */
 .navi:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
+/* line 18, ../sass/partials/_mixins.scss */
+.navi:nth-child(2):hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 62, ../sass/partials/_layout.scss */
+/* line 64, ../sass/partials/_layout.scss */
 .navi { background-color: rgba(122, 198, 218, 0.3); height: 189px; width: 100%; }
-@media screen and (max-width: 768px) { /* line 62, ../sass/partials/_layout.scss */
+@media screen and (max-width: 768px) { /* line 64, ../sass/partials/_layout.scss */
   .navi { width: 46.875%; } }
 
-/* line 74, ../sass/partials/_layout.scss */
+/* line 76, ../sass/partials/_layout.scss */
 .main { height: 816px; }
 
-/* line 79, ../sass/partials/_layout.scss */
+/* line 81, ../sass/partials/_layout.scss */
 .main, section { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; width: 100%; }
 
-/* line 85, ../sass/partials/_layout.scss */
+/* line 87, ../sass/partials/_layout.scss */
 section { height: 597px; }
 
-/* line 89, ../sass/partials/_layout.scss */
+/* line 91, ../sass/partials/_layout.scss */
 header, article { background-color: rgba(122, 198, 218, 0.3); width: 100%; }
 
-/* line 95, ../sass/partials/_layout.scss */
+/* line 97, ../sass/partials/_layout.scss */
 header { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; height: 189px; }
+/* line 18, ../sass/partials/_mixins.scss */
+header:hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 100, ../sass/partials/_layout.scss */
+/* line 103, ../sass/partials/_layout.scss */
 article:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; height: 378px; }
+/* line 18, ../sass/partials/_mixins.scss */
+article:nth-child(1):hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 104, ../sass/partials/_layout.scss */
+/* line 108, ../sass/partials/_layout.scss */
 article:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; height: 189px; }
+/* line 18, ../sass/partials/_mixins.scss */
+article:nth-child(2):hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 116, ../sass/partials/_layout.scss */
+/* line 121, ../sass/partials/_layout.scss */
 aside { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; width: 100%; height: 597px; }
 
-/* line 122, ../sass/partials/_layout.scss */
+/* line 127, ../sass/partials/_layout.scss */
 aside:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 125, ../sass/partials/_layout.scss */
+/* line 130, ../sass/partials/_layout.scss */
 aside:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 128, ../sass/partials/_layout.scss */
+/* line 133, ../sass/partials/_layout.scss */
 aside:last-child(3) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 132, ../sass/partials/_layout.scss */
+/* line 137, ../sass/partials/_layout.scss */
 .archive { background-color: rgba(122, 198, 218, 0.3); height: 408px; width: 100%; }
+/* line 18, ../sass/partials/_mixins.scss */
+.archive:hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 138, ../sass/partials/_layout.scss */
+/* line 144, ../sass/partials/_layout.scss */
 .contact { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; height: 100px; width: 100%; }
 
-/* line 145, ../sass/partials/_layout.scss */
+/* line 151, ../sass/partials/_layout.scss */
 .contact:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 148, ../sass/partials/_layout.scss */
+/* line 154, ../sass/partials/_layout.scss */
 .contact:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 151, ../sass/partials/_layout.scss */
+/* line 157, ../sass/partials/_layout.scss */
 .contact:nth-child(3) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 155, ../sass/partials/_layout.scss */
+/* line 161, ../sass/partials/_layout.scss */
 .contactSub { height: 100px; width: 27.77777777777778%; background-color: rgba(122, 198, 218, 0.3); }
+/* line 18, ../sass/partials/_mixins.scss */
+.contactSub:hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 160, ../sass/partials/_layout.scss */
+/* line 167, ../sass/partials/_layout.scss */
 .rights { height: 30px; width: 100%; background-color: rgba(122, 198, 218, 0.3); text-align: right; padding: 4px 10px 0 0; color: rgba(202, 232, 240, 0.3); text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); }
-/* line 168, ../sass/partials/_layout.scss */
+/* line 18, ../sass/partials/_mixins.scss */
+.rights:hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
+/* line 176, ../sass/partials/_layout.scss */
 .rights:hover { color: #fff; }
 
 /* line 1, ../sass/partials/_type.scss */
