--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -11,7 +11,8 @@ $color10: #000;   // Black
 $color11: #fff;   // White
 
 $flexcolor1: rgba(122,198,218,.3); // soft blue #7AC6DA
-$flexcolor2: #2D3D4F; // dark blue #273A66 #30446E
+$flexcolor2: rgba(122,198,218,.7); // hover state
+$flexcolor3: rgba(45,61,79,1); // dark blue #273A66 #30446E
 
 
 $break-smaller: 320px;  
