--- a/css/styles.css
+++ b/css/styles.css
@@ -182,86 +182,90 @@ nav { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-d
   nav { height: 189px; display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; } }
 
 /* line 55, ../sass/partials/_layout.scss */
-.navi:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
-/* line 9, ../sass/partials/_mixins.scss */
-.navi:nth-child(1):hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
+.navi:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-align-items: center; -webkit-justify-content: center; justify-content: center; }
 
-/* line 59, ../sass/partials/_layout.scss */
+/* line 61, ../sass/partials/_layout.scss */
 .navi:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
-/* line 9, ../sass/partials/_mixins.scss */
-.navi:nth-child(2):hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 64, ../sass/partials/_layout.scss */
+/* line 65, ../sass/partials/_layout.scss */
 .navi { background-color: rgba(122, 198, 218, 0.3); height: 189px; width: 100%; }
-@media screen and (max-width: 768px) { /* line 64, ../sass/partials/_layout.scss */
+/* line 9, ../sass/partials/_mixins.scss */
+.navi:hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
+/* line 70, ../sass/partials/_layout.scss */
+.navi a { display: block; color: #2d3d4f; background-color: rgba(109, 192, 101, 0.5); border-radius: 4px; -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; text-decoration: none; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); text-align: center; padding: 8px 0 0 0; margin: 5px 0 0 0; height: 35px; width: 80%; }
+/* line 83, ../sass/partials/_layout.scss */
+.navi a:hover { background-color: #6dc065; box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
+@media screen and (max-width: 768px) { /* line 65, ../sass/partials/_layout.scss */
   .navi { width: 46.875%; } }
 
-/* line 76, ../sass/partials/_layout.scss */
+/* line 97, ../sass/partials/_layout.scss */
 .main { height: 816px; }
 
-/* line 81, ../sass/partials/_layout.scss */
+/* line 102, ../sass/partials/_layout.scss */
 .main, section { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; width: 100%; }
 
-/* line 87, ../sass/partials/_layout.scss */
+/* line 108, ../sass/partials/_layout.scss */
 section { height: 597px; }
 
-/* line 91, ../sass/partials/_layout.scss */
+/* line 112, ../sass/partials/_layout.scss */
 header, article { background-color: rgba(122, 198, 218, 0.3); width: 100%; }
 
-/* line 97, ../sass/partials/_layout.scss */
+/* line 118, ../sass/partials/_layout.scss */
 header { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; height: 189px; }
 /* line 9, ../sass/partials/_mixins.scss */
 header:hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
+/* line 122, ../sass/partials/_layout.scss */
+header .logo { display: block; width: 162px; height: 162px; margin: 13.5px auto 13.5px auto; }
 
-/* line 103, ../sass/partials/_layout.scss */
+/* line 130, ../sass/partials/_layout.scss */
 article:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; height: 378px; }
 /* line 9, ../sass/partials/_mixins.scss */
 article:nth-child(1):hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 108, ../sass/partials/_layout.scss */
+/* line 135, ../sass/partials/_layout.scss */
 article:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; height: 189px; }
 /* line 9, ../sass/partials/_mixins.scss */
 article:nth-child(2):hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 121, ../sass/partials/_layout.scss */
+/* line 148, ../sass/partials/_layout.scss */
 aside { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; width: 100%; height: 597px; }
 
-/* line 127, ../sass/partials/_layout.scss */
+/* line 154, ../sass/partials/_layout.scss */
 aside:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 130, ../sass/partials/_layout.scss */
+/* line 157, ../sass/partials/_layout.scss */
 aside:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 133, ../sass/partials/_layout.scss */
+/* line 160, ../sass/partials/_layout.scss */
 aside:last-child(3) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 137, ../sass/partials/_layout.scss */
+/* line 164, ../sass/partials/_layout.scss */
 .archive { background-color: rgba(122, 198, 218, 0.3); height: 408px; width: 100%; }
 /* line 9, ../sass/partials/_mixins.scss */
 .archive:hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 144, ../sass/partials/_layout.scss */
+/* line 171, ../sass/partials/_layout.scss */
 .contact { display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-align-content: flex-start; -ms-flex-line-pack: start; align-content: flex-start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-justify-content: space-between; justify-content: space-between; height: 100px; width: 100%; }
 
-/* line 151, ../sass/partials/_layout.scss */
+/* line 178, ../sass/partials/_layout.scss */
 .contact:nth-child(1) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 154, ../sass/partials/_layout.scss */
+/* line 181, ../sass/partials/_layout.scss */
 .contact:nth-child(2) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 157, ../sass/partials/_layout.scss */
+/* line 184, ../sass/partials/_layout.scss */
 .contact:nth-child(3) { -webkit-order: 0; -ms-flex-order: 0; order: 0; -webkit-flex: 0 1 auto; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-align-self: auto; -ms-flex-item-align: auto; align-self: auto; }
 
-/* line 161, ../sass/partials/_layout.scss */
+/* line 188, ../sass/partials/_layout.scss */
 .contactSub { height: 100px; width: 27.77777777777778%; background-color: rgba(122, 198, 218, 0.3); }
 /* line 9, ../sass/partials/_mixins.scss */
 .contactSub:hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
 
-/* line 167, ../sass/partials/_layout.scss */
+/* line 194, ../sass/partials/_layout.scss */
 .rights { height: 30px; width: 100%; background-color: rgba(122, 198, 218, 0.3); text-align: right; padding: 4px 10px 0 0; color: rgba(202, 232, 240, 0.3); text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); }
 /* line 9, ../sass/partials/_mixins.scss */
 .rights:hover { background-color: rgba(122, 198, 218, 0.7); box-shadow: 2px 8px 6px rgba(31, 42, 54, 0.2), 0px -5px 35px rgba(88, 119, 154, 0.3); }
-/* line 176, ../sass/partials/_layout.scss */
+/* line 203, ../sass/partials/_layout.scss */
 .rights:hover { color: #fff; }
 
 /* line 1, ../sass/partials/_type.scss */
