--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -13,6 +13,8 @@ $color11: #fff;   // White
 $flexcolor1: rgba(122,198,218,.3); // soft blue #7AC6DA
 $flexcolor2: rgba(122,198,218,.7); // hover state
 $flexcolor3: rgba(45,61,79,1); // dark blue #273A66 #30446E
+$flexcolor4: rgba(109, 192, 101,.5); // green nav button 
+$flexcolor5: rgba(109, 192, 101,1); // green nav button hover state
 
 
 $break-smaller: 320px;  
